--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Raise Capital</title>
+<style>
+    html, body, div {
+        display: flex;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+        width : 100%;
+        height: 100%;
+        font-family: Arial;
+        font-size: 25px;
+        color: white;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    }
+    div {
+        background: url("raise.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+</style>
 </head>
 <body>
 
-<center>Future website of Raise Capital</center>
+<div>Future website of Raise Capital</div>
 
 </body>
 </html>
