Social cosmetic changes

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
     <title>Raise Capital</title>
+
+    <meta name="description" content="Raise Capital is an USA investment bank specialized in fund raising, redomiciliation, merger and acquisition of high tech companies."/>
+    <meta name="keywords" content="raise, capital, mergers, acquisitions, m&a, redomiciliation, fund raising, high tech, venture" />
+
+    <meta name='twitter:card' content="summary_large_image"/>
+    <meta name='twitter:title' content="Raise Capital"/>
+    <meta name='twitter:description' content="Raise Capital is an USA investment bank specialized in fund raising, redomiciliation, merger and acquisition of high tech companies."/>
+    <!--
+    <meta name='twitter:site' content="@RaiseFin"/>
+    <meta name='twitter:creator' content="@RaiseFin"/>
+    -->
+    <meta name='twitter:image' content="https://raisecapital.us/hero.jpg"/>
+    <meta property='og:image' content="https://raisecapital.us/hero.jpg"/>
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -345,7 +357,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
-                                        <form id="ajax-contact" method="post" action="http://algonaut.herokuapp.com/raise-mail">
+                                        <form id="ajax-contact" method="post" action="//algonaut.herokuapp.com/raise-mail">
                                             <div class="input-field">
                                                 <input type="text" class="form-control" name="name" id="name" required placeholder="Name">
                                             </div>
