Form message sending fixed

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
-                                        <form id="ajax-contact" method="post" action="//algonaut.herokuapp.com/raise-mail">
+                                        <form id="ajax-contact" method="post" action="https://algonaut.herokuapp.com/raise-mail">
                                             <div class="input-field">
                                                 <input type="text" class="form-control" name="name" id="name" required placeholder="Name">
                                             </div>
