--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                     <div class="row justify-content-center">
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>Services</span>
-                                <h2>VENTURE FINANCE</h2>
+                                <span>International High Tech Finance</span>
+                                <h2>Services</h2>
                             </div>
                             <div class="services-section">
                                 <div class="services-list owl-carousel">
@@ -279,8 +279,8 @@
                     <div class="row justify-content-center">
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>Testimonials</span>
-                                <h2>what they say about us?</h2>
+                                <span>what they say about us?</span>
+                                <h2>Testimonials</h2>
                             </div>
                             <div class="col-md-8 offset-md-2">
                                 <div class="testimonials-section">
