--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <title>Raise Capital</title>
 
-    <meta name="description" content="Raise Capital is an USA investment bank specialized in fund raising, redomiciliation, merger and acquisition of high tech companies."/>
+    <meta name="description" content="Raise Capital offer USA investment bank services specialized in fund raising, redomiciliation, merger and acquisition of high tech companies."/>
     <meta name="keywords" content="raise, capital, mergers, acquisitions, m&a, redomiciliation, fund raising, high tech, venture" />
 
     <meta name='twitter:card' content="summary_large_image"/>
     <meta name='twitter:title' content="Raise Capital"/>
-    <meta name='twitter:description' content="Raise Capital is an USA investment bank specialized in fund raising, redomiciliation, merger and acquisition of high tech companies."/>
+    <meta name='twitter:description' content="Raise Capital offers USA investment bank services specialized in fund raising, redomiciliation, merger and acquisition of high tech companies."/>
     <!--
     <meta name='twitter:site' content="@RaiseFin"/>
     <meta name='twitter:creator' content="@RaiseFin"/>
@@ -241,7 +241,7 @@
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Mobeewave</h4>
-                                                <p>Mobeewave, a Canadian provider of Mobile Wallet solutions, was sold to Apple in 2020 thanks to the Raise Capital team.</p>
+                                                <p>Mobeewave, a Canadian provider of Mobile Wallet solutions, retaining Raise Capital for USA relations.</p>
                                             </div>
                                         </div>
                                     </div>
