--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Raise Capital</h1>
-                        <p class="animate" data-animate="fadeInUp">An USA investment bank specialized in fund raising, redomiciliation, merger and acquisition of high tech companies</p>
+                        <p class="animate" data-animate="fadeInUp">Investment bank services specialized in fund raising, redomiciliation, merger and acquisition of high tech companies</p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Mobeewave</h4>
-                                                <p>Mobeewave, a Canadian provider of Mobile Wallet solutions, retaining Raise Capital for USA relations.</p>
+                                                <p>Mobeewave, a Canadian provider of Mobile Wallet solutions, retaining Raise Capital for business development strategy.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -252,7 +252,7 @@
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>LoopPay</h4>
-                                                <p>LoopPay, a provider of Mobile Payment solutions based in Boston, was sold to Samsung in 2015 thanks to the Raise Capital team.</p>
+                                                <p>LoopPay, a provider of Mobile Payment solutions based in Boston, was sold to Samsung in 2015 with support of Raise Capital team members.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -349,7 +349,7 @@
                                                 Belmont MA &bull; USA
                                             </div>
                                             <div class="contact-row">
-                                                <i class="fa fa-phone"></i> +1 617 331 0755
+                                                <i class="fa fa-phone"></i> +1 615 266 6662
                                             </div>
                                             <div class="contact-row">
                                                 <i class="fa fa-envelope"></i> info@raisecapital.us
