--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Raise Capital</h1>
-                        <p class="animate" data-animate="fadeInUp">Investment bank services specialized in fund raising, redomiciliation, merger and acquisition of high tech companies</p>
+                        <p class="animate" data-animate="fadeInUp">US investment bank services specialized in fund raising, redomiciliation, merger and acquisition of high tech companies</p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                                         <div class="service-box">
                                             <div><img src="images/service-01.jpg" /></div>
                                             <h3>Fund Raising</h3>
-                                            <p>As both entrpeneurs and fund managers we are uniquely qualified to understand both sides of the table and close the deal</p>
+                                            <p>As both entrepreneurs and fund managers we are uniquely qualified to understand both sides of the table and close the deal</p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
