--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <link rel="stylesheet" href="css/responsive.css">
 
-    </head>
-    
+  </head>
+  <body>
     <div id="video">
         <div class="preloader">
             <div class="preloader-bounce">
@@ -389,9 +389,9 @@
         <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
-                    <li><a href="#" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="mailto:info@raisecapital.us?subject=Raise%20Capital%20Question&body=Hi!%20I%27d%20like%20to%20have%20more%20info%20about%20Raise%20Capital" title="Email"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=16152666662&text=Hi!%20I%27d%20like%20to%20have%20more%20info%20about%20Raise%20Capital" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
                 </ul>
             </div>
         </div>
