--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
                             <div class="nav-box navbar-collapse">
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
                                     <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
+                                    <!--
                                     <li data-menuanchor="slide02"><a href="#slide02">About Us</a></li>
                                     <li data-menuanchor="slide03"><a href="#slide03">Services</a></li>
                                     <li data-menuanchor="slide04"><a href="#slide04">Approach</a></li>
                                     <li data-menuanchor="slide05"><a href="#slide05">Portfolio</a></li>
                                     <li data-menuanchor="slide06"><a href="#slide06">Testimonials</a></li>
                                     <li data-menuanchor="slide07"><a href="#slide07">Contact</a></li>
+                                    -->
                                 </ul>
                             </div>
                         </nav>
@@ -86,12 +88,13 @@
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Raise Capital</h1>
-                        <p class="animate" data-animate="fadeInUp">US investment bank services specialized in fund raising, redomiciliation, merger and acquisition of high tech companies</p>
-                        <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
+                        <!-- <p class="animate" data-animate="fadeInUp">US investment bank services specialized in fund raising, redomiciliation, merger and acquisition of high tech companies</p>
+                        <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div> -->
                     </div>
                 </div>
             </div>
 
+        <!--
             <div class="section animated-row" data-section="slide02">
                 <div class="section-inner">
                     <div class="about-section">
@@ -121,6 +124,7 @@
                                                         <i class="fa fa-star counter-icon" aria-hidden="true"></i><span class="count-number">34</span> Years Operating
                                                     </div>
                                                 </div>
+                                                -->
                                                 <!--
                                                 <div class="item animate" data-animate="fadeInUp">
                                                     <div class="counter-box">
@@ -133,6 +137,7 @@
                                                     </div>
                                                 </div>
                                                 -->
+                                                <!--
                                             </div>
                                         </div>
                                     </div>
@@ -177,6 +182,7 @@
                                             <p>Our reputation, proven track record and vast professional network will ensure a successful sale and a smooth team transition</p>
                                         </div>
                                     </div>
+                                    -->
                                     <!--
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
@@ -186,6 +192,7 @@
                                         </div>
                                     </div>
                                     -->
+                                    <!--
                                 </div>
                             </div>
                         </div>
@@ -385,7 +392,7 @@
                 </div>
             </div>
         </div>
-
+        -->
         <!--
         <div id="social-icons">
             <div class="text-right">
