Web 0.9 (Form token)

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
                                               msg-success="Message sent! Will reply shortly."
                                               msg-failure="Message not sent. Please try again."
                                               msg-error="Oops! There was an error and the message could not be sent.">
+                                            <input type="hidden" name="token" id="token"/>
                                             <div class="input-field">
                                                 <input type="text" class="form-control" name="name" id="name" required placeholder="Name">
                                             </div>
