Web 0.9 (Form token)

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                         </div>
                                     </div>
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
-                                        <form id="ajax-contact" method="post" action="https://algonaut.herokuapp.com/raise-mail"
+                                        <form id="ajax-contact" method="POST" action="https://algonaut.herokuapp.com/raise-mail"
                                               msg-sending="Sending the message. One moment."
                                               msg-success="Message sent! Will reply shortly."
                                               msg-failure="Message not sent. Please try again."
@@ -385,7 +385,7 @@
                 </div>
             </div>
         </div>
-        <div id="social-icons">
+<!--        <div id="social-icons">
             <div class="text-right">
                 <ul class="social-icons">
                     <li><a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
@@ -393,7 +393,7 @@
                     <li><a href="https://api.whatsapp.com/send?phone=16152666662&text=Hi!%20I%27d%20like%20to%20have%20more%20info%20about%20Raise%20Capital" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
                 </ul>
             </div>
-        </div>
+        </div>-->
     </div>
 
     <script src="js/jquery.js"></script>
