--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
     <!-- Form js -->
     <script id="capt" src="https://www.google.com/recaptcha/api.js?render=6LeXSoomAAAAAMUViqOsxvu4Er3XukyU1Am4-jC0"></script>
-    <script src="assets/js/form.js"></script>
+    <script src="js/form.js"></script>
 
     <script src="js/custom.js"></script>
 
