--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                     <li data-menuanchor="slide06"><a href="#slide06">Testimonials</a></li>
 -->
                                     <li data-menuanchor="slide05"><a href="#slide05">Contact</a></li>
-                                    <li data-menuanchor="slide08"><a href="http://sofia.conexo.vc"><i class="fa fa-envelope" style="margin-right: 10px;"></i> Login</a></li>
+                                    <li data-menuanchor="slide08"><a href="http://sofia.conexo.vc"><i class="fa fa-play" style="margin-right: 10px;"></i> Login</a></li>
                                 </ul>
                             </div>
                         </nav>
