Web 1.0 (errors fixed)

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                             <h3>$16,000 / year</h3>
                                             <p>Your private back-office to manage a complex <b>multi-asset</b> venture portfolio through several years</p>
                                             <p>Each investment includes all the features listed above</p>
-                                            <p>Con operate during up to ten years. Unlimited closes and distributions</p>
+                                            <p>Can operate during up to ten years. Unlimited closes and distributions</p>
                                             <p><b><u>Request a Demo</u></b></p>
                                         </div>
                                     </div>
