--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
                                         <div class="service-box">
                                             <h3>Syndicate</h3>
                                             <h3>$250 / year</h3>
-                                            <p>Use our <b>Cloud CRM</b> to digitize the deal flow process, keep track of investments, and manage investors</p>
-                                            <p>Our solution scales from a few to thousands of members</p>
-                                            <p>Cloud CRM is also <b>included for FREE</b> with our SPV and Fund packages</p>
+                                            <p>Use our <b>Cloud Admin</b> to digitize the deal flow process, keep track of investments, and manage investors</p>
+                                            <p>No usage limits. Investment vehicle formation billed separately</p>
+                                            <p>Cloud Admin is <b>included for FREE</b> with our SPV and Fund packages</p>
                                             <p><b><u>Request a Demo</u></b></p>
                                         </div>
                                     </div>
@@ -218,7 +218,7 @@
                                             <h3>SPV</h3>
                                             <h3>$6,000 / once</h3>
                                             <p>A simple yet powerful solution for <b>singe-asset</b> investments that reduces frictions and costs</p>
-                                            <p>Each investment includes all the features listed above</p>
+                                            <p>Each investment vehicle includes all the features listed above</p>
                                             <p>Must complete within 12 months. Up to two closes and one distribution</p>
                                             <p><b><u>Request a Demo</u></b></p>
                                         </div>
@@ -230,7 +230,7 @@
                                             <h3>Fund</h3>
                                             <h3>$16,000 / year</h3>
                                             <p>Your private back-office to manage a complex <b>multi-asset</b> venture portfolio through several years</p>
-                                            <p>Each investment includes all the features listed above</p>
+                                            <p>Each investment vehicle includes all the features listed above</p>
                                             <p>Can operate during up to ten years. Unlimited closes and distributions</p>
                                             <p><b><u>Request a Demo</u></b></p>
                                         </div>
@@ -376,6 +376,7 @@
                                             <div class="contact-row">
                                                 <i class="fa fa-envelope"></i> info&#64;raisecapital.us
                                             </div>
+                                            <div id="form-messages" class="mt-3"></div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
@@ -396,10 +397,10 @@
                                             </div>
                                             <button class="btn" type="submit">Submit</button>
                                         </form>
-                                        <div id="form-messages" class="mt-3"></div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="animate" data-animate="fadeInUp" style="padding-top: 40px;">© Copyright 2023 &bull; Raise Capital &bull; All rights reserved</div>
                         </div>
                     </div>
                 </div>
@@ -410,7 +411,7 @@
                 <ul class="social-icons">
                     <li><a href="#" title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="#contact" title="Email"><i class="fa fa-envelope"></i></a></li>
-                    <li><a href="https://api.whatsapp.com/send?phone=16152666662&text=Hi!%20I%27d%20like%20to%20have%20more%20info%20about%20Raise%20Capital" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=5555555555&text=Hi!%20I%27d%20like%20to%20have%20more%20info%20about%20Raise%20Capital" title="Whatsapp"><i class="fa fa-whatsapp"></i></a></li>
                 </ul>
             </div>
         </div>-->
