Website Version 1.1 (Login)

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="Roboto/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-    <link rel="stylesheet" type="text/css" href="Roboto/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
 
-    <link rel="stylesheet" type="text/css" href="Roboto/fullpage.min.css">
+    <link rel="stylesheet" type="text/css" href="css/fullpage.min.css">
 
-    <link rel="stylesheet" type="text/css" href="Roboto/owl.carousel.css">
+    <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
 
-    <link rel="stylesheet" href="Roboto/animate.css">
+    <link rel="stylesheet" href="css/animate.css">
 
-    <link rel="stylesheet" href="Roboto/templatemo-style.css">
+    <link rel="stylesheet" href="css/templatemo-style.css">
 
-    <link rel="stylesheet" href="Roboto/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css">
 
   </head>
   <body>
